--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,11 @@
 certifi==2020.12.5
 chardet==4.0.0
 idna==2.10
+joblib==1.0.1
+numpy==1.20.2
+pydub==0.25.1
 requests==2.25.1
+scikit-learn==0.24.1
+scipy==1.6.2
+threadpoolctl==2.1.0
 urllib3==1.26.4
